<resources>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="server_error_dialog_title">Server Error</string>
    <string name="server_error_dialog_message">Communication with the server failed</string>
    <string name="server_error_dialog_button_caption">OK</string>
    <string name="rationale_camera">This permission is a must for major app functions</string>
    <string name="scan_tag">Scan the tag</string>
    <string name="place_str">Place the QR code of Barcode  in the frame</string>
    <string name="enter_garment_id">Enter the garment ID</string>
    <string name="nav_order_details">order details</string>
    <string name="nav_customers">customers</string>
    <string name="nav_order_history">order history</string>
    <string name="nav_new_job">new job</string>
    <string name="nav_message">message</string>
    <string name="nav_configure">configure</string>
    <string name="nav_product">product</string>
    <string name="nav_pricing">pricing</string>
    <string name="nav_serviceable">serciveable</string>
    <string name="nav_areas">areas</string>


    <string name="email_hint"><font size="12"> Enter Email Address</font></string>
    <string name="password_hint">Min 5 Char</string>
    <string name="signu_up">SignUp</string>
    <string name="guest">Guest</string>
    <string name="registered_number">Registered number</string>
    <string name="employee_id">Employee ID</string>
    <string name="password">Password</string>
    <string name="search_hint">search by name/number/mail id</string>
    <string name="sort_date">sort by date</string>
    <string name="filter_total">total</string>
    <string name="filter_status">status</string>
    <string name="filter_add">add filter</string>
    <string name="date_time"><![CDATA[date & time]]></string>
    <string name="name">name</string>
    <string name="mobile">mobile no</string>
    <string name="email_id">email id</string>
    <string name="add_customer">add new customer</string>
    <string name="heading_customer_list">here is the list of customers registered in dryo system. click on a cust id to view more details.</string>
    <string name="login">login</string>
    <string name="some_error">Ohoh something went awery !! Try again</string>

</resources>