<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_add"
            android:textColor="@color/tv_dark_color"
            android:drawableStart="@drawable/ic_filter"
            android:padding="5dp"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            app:drawableTint="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sort_date"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimaryDark"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:drawablePadding="15dp"
                    app:drawableTint="@color/white"
                    app:drawableEndCompat="@android:drawable/ic_menu_my_calendar" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/filter_total"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimaryDark"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:drawablePadding="15dp"
                    app:drawableTint="@color/white"
                    app:drawableEndCompat="@drawable/ic_total" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/filter_status"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimaryDark"
                    android:drawablePadding="15dp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    app:drawableTint="@color/white"
                    app:drawableEndCompat="@drawable/ic_status"/>

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@android:drawable/ic_menu_search"
            android:hint="@string/search_hint"
            android:textColor="@color/text_color_hint" />

    </LinearLayout>

</LinearLayout>