<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="10"
    android:id="@+id/adapter_holder"
    android:background="@color/colorPrimaryListBg">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:paddingEnd="1dp"
        android:layout_weight=".7"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="id"
            android:id="@+id/tv_adp_id"
            android:padding="5dp"
            android:gravity="center"
            android:background="@color/colorPrimaryListBg"
            android:textColor="@color/tv_sub_heading"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:paddingEnd="1dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:id="@+id/tv_adp_date_time"
            android:padding="5dp"
            android:gravity="center"
            android:background="@color/colorPrimaryListBg"
            android:textColor="@color/tv_sub_heading"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="match_parent"
        android:paddingEnd="1dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/tv_adp_name"
            android:padding="5dp"
            android:gravity="center"
            android:background="@color/colorPrimaryListBg"
            android:textColor="@color/tv_sub_heading"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:paddingEnd="1dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:id="@+id/tv_adp_mobile"
            android:padding="5dp"
            android:gravity="center"
            android:background="@color/colorPrimaryListBg"
            android:textColor="@color/tv_sub_heading"/>

    </FrameLayout>
    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="match_parent"
        android:paddingEnd="1dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:id="@+id/tv_adp_email_id"
            android:padding="5dp"
            android:gravity="center"
            android:background="@color/colorPrimaryListBg"
            android:textColor="@color/tv_sub_heading"/>

    </FrameLayout>
    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:paddingEnd="1dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_total"
            android:id="@+id/tv_adp_total"
            android:padding="5dp"
            android:gravity="center"
            android:background="@color/colorPrimaryListBg"
            android:textColor="@color/tv_sub_heading"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="1.3"
        android:layout_height="match_parent"
        android:paddingEnd="1dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_status"
            android:id="@+id/tv_adp_status"
            android:padding="5dp"
            android:gravity="center"
            android:background="@color/colorPrimaryListBg"
            android:textColor="@color/tv_sub_heading"/>

    </FrameLayout>

</LinearLayout>