<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.appxcore.quickSetup.ui.dashBoardFrame.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="50dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/text_nav_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg_navigation"
        android:gravity="start"
        android:text="@string/nav_order_details"
        android:textColor="@color/tv_sub_heading"
        android:padding="10dp"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_nav_02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg_navigation"
        android:gravity="start"
        android:text="@string/nav_customers"
        android:textAlignment="gravity"
        android:textSize="20sp"
        android:textColor="@color/tv_sub_heading"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/text_nav_03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg_navigation"
        android:gravity="start"
        android:text="@string/nav_order_history"
        android:textAlignment="gravity"
        android:textSize="20sp"
        android:textColor="@color/tv_sub_heading"
        android:padding="10dp"/>

        <TextView
            android:id="@+id/text_nav_04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_navigation"
            android:gravity="start"
            android:text="@string/title_notifications"
            android:textAlignment="gravity"
            android:textSize="20sp"
            android:textColor="@color/tv_sub_heading"
            android:padding="10dp"/>

    <TextView
        android:id="@+id/text_nav_05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg_navigation"
        android:gravity="start"
        android:text="@string/nav_new_job"
        android:textAlignment="gravity"
        android:textSize="20sp"
        android:textColor="@color/tv_sub_heading"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/text_nav_06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg_navigation"
        android:gravity="start"
        android:text="@string/nav_message"
        android:textAlignment="gravity"
        android:textSize="20sp"
        android:textColor="@color/tv_sub_heading"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/text_nav_07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg_navigation"
        android:gravity="start"
        android:text="@string/nav_configure"
        android:textAlignment="gravity"
        android:textSize="20sp"
        android:textColor="@color/tv_sub_heading"
        android:padding="10dp"/>


   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:id="@+id/nav_ll_submenu">

        <TextView
            android:id="@+id/text_nav_06_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_navigation"
            android:gravity="start"
            android:text="@string/nav_product"
            android:textAlignment="gravity"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_nav_06_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_navigation"
            android:gravity="start"
            android:text="@string/nav_pricing"
            android:textAlignment="gravity"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_nav_06_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_navigation"
            android:gravity="start"
            android:text="@string/nav_serviceable"
            android:textAlignment="gravity"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_nav_06_04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_navigation"
            android:gravity="start"
            android:text="@string/nav_areas"
            android:textAlignment="gravity"
            android:textSize="20sp" />

    </LinearLayout>-->

    </LinearLayout>

    </ScrollView>

</LinearLayout>