<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_primary_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_customer_list"
            android:textColor="@color/tv_sub_heading"
            android:padding="5dp"
            android:textStyle="italic"
            android:textSize="12sp"
            android:layout_margin="5dp"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawableEnd="@drawable/ic_add"
                android:text="@string/add_customer"
                android:background="@drawable/btn_bg_main"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableEnd="@android:drawable/ic_menu_search"
                android:hint="@string/search_hint"
                android:textColor="@color/text_color_hint" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>