<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/adapter_holder"
    android:background="@color/color_primary_list_bg">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:paddingEnd="1dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="id"
                android:id="@+id/tv_adp_id"
                android:padding="5dp"
                android:gravity="start|center_vertical"
                android:background="@color/color_primary_list_bg"
                android:textColor="@color/tv_sub_heading"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:paddingEnd="1dp"
        android:id="@+id/adp_fl_bg_3"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/tv_adp_name"
            android:padding="5dp"
            android:gravity="start|center_vertical"
            android:background="@color/color_primary_list_bg"
            android:textColor="@color/tv_sub_heading"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="match_parent"
        android:paddingEnd="1dp"
        android:id="@+id/adp_fl_bg_4"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:id="@+id/tv_adp_mobile"
            android:padding="5dp"
            android:gravity="start|center_vertical"
            android:background="@color/color_primary_list_bg"
            android:textColor="@color/tv_sub_heading"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:paddingEnd="1dp"
        android:id="@+id/adp_fl_bg_5"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:id="@+id/tv_adp_email_id"
            android:padding="5dp"
            android:gravity="start|center_vertical"
            android:background="@color/color_primary_list_bg"
            android:textColor="@color/tv_sub_heading"/>

    </FrameLayout>


</LinearLayout>