<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/RedAccent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/ll_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        android:layout_weight="2"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp"
            android:layout_weight="7">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/RedAccent"
                        android:background="@null"
                        android:hint="@string/registered_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/registered_number"
                            android:id="@+id/et_sign_in_mobile_number"
                            android:inputType="phone"
                            android:background="@drawable/edittext_border"
                            android:textColor="@color/edit_text_color"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="Or"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/RedAccent"
                        android:hint="@string/email_hint"
                        android:background="@null">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_sign_in_user_name"
                            android:background="@drawable/edittext_border"
                            android:hint="@string/email_hint"
                            android:inputType="textEmailAddress"
                            android:layout_margin="5dp"
                            android:textSize="@dimen/text_size_normal"
                            android:textColor="@color/edit_text_color"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="Or"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/RedAccent"
                        android:hint="@string/employee_id"
                        android:background="@null">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_sign_in_employee_id"
                            android:background="@drawable/edittext_border"
                            android:hint="@string/employee_id"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/edit_text_color"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/edittext_border"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/RedAccent"
                            android:hint="@string/password"
                            android:background="@null">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/et_sign_in_password"
                                android:background="@drawable/edittext_border"
                                android:hint="@string/password_hint"
                                android:inputType="textPassword"
                                app:endIconMode="password_toggle"
                                android:textColor="@color/edit_text_color"/>

                        </com.google.android.material.textfield.TextInputLayout>



                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="Forgot Password?"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>


            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg_main"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/RedAccent"
                android:textSize="18sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="Don't have an account?"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/signu_up"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:visibility="visible" />



            </LinearLayout>


</LinearLayout>
    </ScrollView>
</LinearLayout>